fixing gaps and variables final

--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
     --brown-800: hsl(14, 45%, 36%);
     --rose-800: hsl(332, 51%, 32%);
     --rose-50: hsl(330, 100%, 98%);
-    --small-space: 10px;
-    --medium-space: 25px;
-    --large-space: 35px;
+    --small-space: 15px;
+    --medium-space: 30px;
+    --large-space: 40px;
     font-size: 16px;
 }
 
